@@ -3,7 +3,6 @@
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
 #include "CEmptySceneNode.h"
-#include "IVideoDriver.h"
 #include "ISceneManager.h"
 
 namespace irr
